@@ -8,6 +8,9 @@ Under development
 Features added
 --------------
 
+* objectify.DataElement now supports setting values from existing data
+  elements (not just plain Python types) and reuses defined namespaces etc.
+
 * E-factory support for lxml.objectify (``objectify.E``)
 
 * Entity support through an ``Entity`` factory and element classes. XML
@@ -29,6 +32,10 @@ Features added
 
 Bugs fixed
 ----------
+
+* objectify.DataElement didn't set up None value correctly
+
+* objectify.DataElement didn't check the value against the provided type hints
 
 * Reference-counting bug in ``Element.attrib.pop()``
 
